--- a/预防医学II/1 绪论.md
+++ b/预防医学II/1 绪论.md
@@ -32,6 +32,8 @@
 
 - 作为公共卫生突发事件的第一报告人、疾病监测的前哨、以及日常各种个体化预防服务和疾病管理服务的提供者，在保障公众健康中起到非常重要的作用（vital role）。
 
+### 「张爸」火了，搞科普需要硬核大白话
+
 ---
 
 > **教学目的**
