--- a/预防医学II/笔记/8 临床预防服务概论.md
+++ b/预防医学II/笔记/8 临床预防服务概论.md
@@ -1,6 +1,34 @@
 # 第八章 临床预防服务概论
 
-## 第一节 临床预防服务基本概念
+### 案例 1
+
+62 岁的张先生在家里正与邻居们一起打牌。但突然倒在桌旁，出现神志不清，口角歪斜和昏迷。邻居们马上把他送往医院。  
+医院检查，血压达 180/120 mm Hg。CT 诊断为高血压性脑出血。虽然经过抢救挽回了生命，仍然留下了一侧肢体的行动障碍。  
+该病人患有慢性胃炎，曾在消化科看病。如果你是消化科医生，在你的日常诊疗中，除了对于胃病的治疗，你认为还应了解哪些情况？
+
+### 案例 2
+
+一名 52 岁的妇女到消化科就诊，主诉有进行性的左下腹痛， 伴随体重减轻和疲劳 3 个月，过去几天出现血性粪便。  
+结肠镜活检发现乙状结肠梗阻性腺癌，当即进行了部分结肠切除术和结肠造口术。  
+病史显示，当病人 24 岁时就曾被诊断患有明显的溃疡性结肠炎，但当时没有得到进一步的治疗。近十几年病人只看过妇产科医生，但从未有医生怀疑过她患溃疡性结肠炎，也没有人建议她进行定期结肠镜检查。
+
+### 案例 3
+
+一名 29 岁的演员在一次车祸后被送入急诊室。他因为驾车没有系安全带，在高速碰撞后被抛出车外 10 米，头部受到致命的损伤。经检验，这名演员的酒精浓度达到 0.24%。  
+据过去一年的记录，他曾患有慢性胃炎，从高中起就有明确的饮酒史，经常驾车不系安全带。
+
+#### 问题
+
+##### 这些案例有什么共同点？
+
+很多情况下， 病人所经历的疾病或死亡在生命的早期都可以有效预防。在发生疾病（如冠心病和肠癌）、外伤 (如车祸) 的几个月、几年或几十年以前就可发现有一很好的检查和干预治疗。
+
+##### 给你什么启示？
+
+- 如果在病人看似健康的时候就能检测和处理这些危险因素，就可以避免危险因素的长期作用而导致最终不得不进行创伤性治疗（如化疗、外科手术、透析等）及发展为慢性疾病（疼痛、瘫痪、精神疾病、致残、死亡等）。
+- 事实表明可以通过相对简单的干预措施（改变不良的行为如吸烟、免疫接种、筛检早期疾病等）预防那些在人力、物力和财力上花费很大的疾病和早死。
+
+作为医生，在处理目前病人疾病的同时，还应着眼于他/她将来的健康问题。
 
 ---
 
@@ -28,18 +56,18 @@
 
 ---
 
-### 案例 1
+## 第一节 临床预防服务基本概念
 
-62 岁的张先生在家里正与邻居们一起打牌。但突然倒在桌旁，出现神志不清，口角歪斜和昏迷。邻居们马上把他送往医院。  
-医院检查，血压达 180/120 mm Hg。CT 诊断为高血压性脑出血。虽然经过抢救挽回了生命，仍然留下了一侧肢体的行动障碍。  
-该病人患有慢性胃炎，曾在消化科看病。如果你是消化科医生，在你的日常诊疗中，除了对于胃病的治疗，你认为还应了解哪些情况？
+### 一、临床预防服务的概念
 
-### 案例 2
+- **临床预防服务（clinical prevention services）** 是指医务人员在临床场所对「健康者」和无症状「患者」的健康危险因素进行评价，实施个性化的预防干预措施来预防疾病和促进健康。
+- **健康管理** 是对服务对象的 **健康危险因素** 进行全面、系统和针对性地评估并对整个生命全程进行干预，减少健康危险因素的威胁、早期发现并及时治疗疾病、 **对所患的疾病进行有效地治疗和预防并发症的发生**， 从而经济有效地避免早亡和提高生活质量。
 
-一名 52 岁的妇女到消化科就诊，主诉有进行性的左下腹痛， 伴随体重减轻和疲劳 3 个月，过去几天出现血性粪便。  
-结肠镜活检发现乙状结肠梗阻性腺癌，当即进行了部分结肠切除术和结肠造口术。  
-病史显示，当病人 24 岁时就曾被诊断患有明显的溃疡性结肠炎，但当时没有得到进一步的治疗。近十几年病人只看过妇产科医生，但从未有医生怀疑过她患溃疡性结肠炎，也没有人建议她进行定期结肠镜检查。
+* 健康管理最先应用于保险行业，保险公司将客户依据健康状况进行分类，那些最有可能成为高血压、糖尿病等疾病的人群被分别交给不同专业的健康或疾病管理中心，由他们采用健康管理与评价等手段指导病人自我保健，并对其进行日常后续管理，以促进健康，降低医疗费用。
+* 健康管理的宗旨是调动个体和群体及整个社会的积极性，有效地利用有限的资源达到最大的健康效果。
 
-### 案例 3
-一名 29 岁的演员在一次车祸后被送入急诊室。他因为驾车没有系安全带，在高速碰撞后被抛出车外10米，头部受到致命的损伤。经检验，这名演员的酒精浓度达到 0.24%。  
-据过去一年的记录，他曾患有慢性胃炎，从高中起就有明确的饮酒史，经常驾车不系安全带。
+- **共同点**：以健康为中心，对危险因素进行各种危险因素进行评价、干预和控制，变被动治疗为主动干预
+- **差别**：临床预防服务：临床与预防的结合，主要由临床医务人员实施
+- **健康管理**：管理学和经济学的理念，涉及预防、保健、诊疗、康复等多个领域。可以有医务人员和健康管理师实施。
+
+预防和治疗一体化的服务方式是最佳的医学服务模式，成为医学发展的趋势。
