--- a/预防医学II/笔记/8 临床预防服务概论.md
+++ b/预防医学II/笔记/8 临床预防服务概论.md
@@ -33,13 +33,13 @@
 ---
 
 > **目的要求**
-
+>
 > - **掌握**：临床预防服务的定义、内涵及主要内容；健康管理的概念；健康维护计划的概念、内容
 > - **熟悉**：临床预防服务的原则、临床预防服务各项内容的具体原则与方法；健康危险因素评价的概念、含义和实施方法、 临床场所如何收集危险因素
 > - **实习**：健康危险因素评价软件
 
 > **教学计划**
-
+>
 > 内容 | 方法 | 教具 | 时间
 > --- | --- | --- | ---
 > 临床预防服务、健康管理的概念 | 小讲课/案例讨论 | 投影/黑板 | 10’
@@ -49,6 +49,7 @@
 > 健康维护计划 | 上课/案例讨论 | 投影 |15’
 
 > **内容**
+>
 > - 健康管理
 > - 临床预防服务
 > - 临床预防服务的内容及实施的原则
@@ -71,3 +72,111 @@
 - **健康管理**：管理学和经济学的理念，涉及预防、保健、诊疗、康复等多个领域。可以有医务人员和健康管理师实施。
 
 预防和治疗一体化的服务方式是最佳的医学服务模式，成为医学发展的趋势。
+
+## 第二节 临床预防服务的规范
+
+### 一、临床预防服务的内容
+
+**临床预防服务的对象**：「无症状（asymptomatic）」和「健康（healthy）」并非指病人目前没有任何主诉，而是针对某些严重威胁生命的特定疾病而言目前没有相应的症状和体征。这要求医生在处理目前病人疾病的同时，着眼于他/她将来的健康问题。
+
+**临床预防服务的内涵**：是在临床环境下第一级和第二级预防的结合。在具体的预防措施上，它强调纠正人们不良的生活习惯、推行临床与预防一体化的卫生服务。
+
+#### 1. 健康咨询（health counseling）
+
+> - 在健康咨询、筛检、免疫、化学预防和治疗性预防这些临床预防中，改变人的行为是预防疾病最有效的方式。
+> - 临床医生所提供的询问、教育和纠正病人健康行为比体格检查更能帮助他们预防将来的疾病。
+> - 换句话说，**对话比体格检查更重要**。
+
+> **临床医生的习惯思维**：临床医生更钟情于疾病的筛检。他们常常认为提供预防服务应该是做结肠检查或胆固醇检测，而不是要问他们是否吸烟，他们吃什么，或他们是否锻炼。
+>
+> - 不重视健康教育的原因可能是没有时间、 没有经济效益以及看不出立竿见影的效果。
+> - 临床医生习惯于处理当时当地的情况, 而不去考虑危险因素对将来健康的影响。
+
+> **我们面对的事实**
+>
+> - 尽管常规体检能减少某些疾病的死亡率，但对多数疾病而言，不健康的行为是人们主要的死因。
+> - 全世界每年死于各种原因的成年人有 3000 万，其
+中 300 万死于吸烟。中国每年死于吸烟的人数已达到 100 万。
+
+> * 通过健康教育培养健康的行为以及纠正不良的健康行为，与第一、 第二和第三级预防都有密切的关系。
+
+> **预防高血压**
+>
+> - 第一级预防：教育病人不吸烟、 不酗酒、 避免吃过咸的食品、 适当运动、 保持理想体重、 劳逸结合等；
+> - 第二级和第三级预防：教育病人 定期测量血压以早期发现血压问题、发现有高血压后及时看医生、治疗中遵从医嘱以及坚持非药物和药物治疗等。
+> - 然而，对筛检来说，只有当疾病产生可测量的病理改变时，才能检出疾病。
+
+通过收集求医者的健康危险因素，与求医者共同制定改变不良健康行为的 **计划**，**随访** 求医者执行计划的情况等一系列的有组织、 有计划的教育活动，促使他们自觉地采纳有益于健康的行为和生活方式， 消除或减轻影响健康的危险因素，预防疾病、促进健康、提高生活质量。
+
+##### 建议开展的健康咨询内容
+
+- 劝阻吸烟
+- 倡导有规律的身体活动
+- 增进健康饮食
+- 保持正常体重
+- 预防意外伤害和事故
+- 预防人类免疫缺陷病毒
+
+#### 2. 筛检（screening）
+
+运用快速、简便的体格检查或实验室检查等手段，在健康人群中发现未被识别的病人或有健康缺陷的人。
+
+#### 3. 免疫接种（immunization）
+
+是指将抗原或抗体注入机体，使人体获得对某些疾病的特异性抵抗力，从而保护易感人群，预防传染病，甚至消灭某些疾病。
+
+#### 4. 化学预防（chemoprophylaxis）
+
+是指对无症状的人使用药物、营养素（包括矿物质）、生物制剂或其他天然物质作为第一级预防措施，提高人群抵抗疾病的能力以防止某些疾病。  
+化学预防不仅是使用药物，还包括使用激素、维生素、无机盐、脂肪酸、氨基酸等营养素、生物制剂和天然动植物的提取物。  
+化学预防是对健康人群和无症状患者进行病因预防，属第一级预防范畴。
+
+##### 常用的化学预防方法
+- 对育龄或怀孕的妇女和幼儿补充含铁物质来降低罹患缺铁性贫血的危险；
+- 补充氟化物降低龋齿患病率（高氟地区不可）；
+- 孕期妇女补充叶酸降低神经管缺陷婴儿出生的危险；
+- 绝经后妇女使用雌激素预防骨质疏松和心脏病；
+- 阿斯匹林预防心脏病、脑卒中，以及可能的肿瘤。
+
+###### 阿斯匹林预防
+阿司匹林抑制血小板形成动脉粥样斑块，降低缺血性中风和心肌梗塞。  
+强烈推荐医生与冠心病危险性增高的病人讨论阿司匹林的化学预防。  
+讨论中同时考虑收益与风险。
+
+**适用对象**
+
+- 40 岁以上男性
+- 绝经期女性
+- 不足上述年龄但有冠心病危险因素的人群：（高血压、吸烟、糖尿病、冠状动脉疾病早期发病的家族史）可使用低剂量阿司匹林。
+
+**副作用**
+
+- 胃肠道副作用——如腹痛、烧灼感、恶心、便秘等。严重者引起消化道出血。
+- 血小板抑制为减少大剂量阿司匹林的副作用，采取低剂量疗法。
+- 每天 75 mg 的剂量即可以达到预防效果。
+- 血压如果没有控制，会减少使用阿司匹林的收益，并且增加出血危险。
+- 与其他抗炎类药物连用增加出血危险。
+- 高龄患者患中风的危险因增加，因此使用阿司匹林的收益也增加，但同时出血的危险也增大。
+
+* 是否接受阿司匹林化学预防也应遵守参与和共同决策的原则。
+* 应让病人明白如果他们是冠心病、血栓栓塞的高危人群，阿司匹林对健康的益处可能超过其导致出血的危险。
+* 多吃偏碱性食物、多饮水、选用肠溶衣片剂 饭后服及加服西咪替丁等 H2 阻滞剂等能缓解阿司匹林引起的胃肠不适。
+
+**在 1000 名个体中使用阿斯匹林的收益与风险**
+
+5 年内冠心病发病率 | 可以预防的冠心病事件 | 可能导致的出血性中风事件 | 可能导致的大的消化道出血事件
+:-: | :-: | :-: | :-:
+1% | 1 ~ 4 | 0 ~ 2 | 2 ~ 4
+3% | 4 ~ 12 | 0 ~ 2 | 2 ~ 4
+5% | 6 ~ 20 | 0 ~ 2 | 2 ~ 4
+
+###### 雌激素预防
+
+用于绝经后妇女的骨质疏松的预防
+
+**受益**：保存骨质、改善脂蛋白、降低心血管疾病的死亡率、减少绝经期后症状；  
+**危险**：阴道出血、子宫癌；  
+**禁忌症**：乳腺癌病史、怀孕者、子宫内膜癌、诊断不明的阴道出血史，活动性肝病、血管栓塞。  
+**可以在下列妇女中考虑**：发生骨质疏松的危险性逐渐增加，低矿物质骨症，身材细长，绝经期提前，无已知禁忌症（如诊断不明的阴道出血、活动性肝病、血管栓塞、肿瘤史）
+
+#### 5. 预防性治疗（preventive treatment）
