--- a/预防医学II/笔记/8 临床预防服务概论.md
+++ b/预防医学II/笔记/8 临床预防服务概论.md
@@ -162,21 +162,89 @@
 * 应让病人明白如果他们是冠心病、血栓栓塞的高危人群，阿司匹林对健康的益处可能超过其导致出血的危险。
 * 多吃偏碱性食物、多饮水、选用肠溶衣片剂 饭后服及加服西咪替丁等 H2 阻滞剂等能缓解阿司匹林引起的胃肠不适。
 
-**在 1000 名个体中使用阿斯匹林的收益与风险**
-
-5 年内冠心病发病率 | 可以预防的冠心病事件 | 可能导致的出血性中风事件 | 可能导致的大的消化道出血事件
-:-: | :-: | :-: | :-:
-1% | 1 ~ 4 | 0 ~ 2 | 2 ~ 4
-3% | 4 ~ 12 | 0 ~ 2 | 2 ~ 4
-5% | 6 ~ 20 | 0 ~ 2 | 2 ~ 4
+> **在 1000 名个体中使用阿斯匹林的收益与风险**
+>
+> 5 年内冠心病发病率 | 可以预防的冠心病事件 | 可能导致的出血性中风事件 | 可能导致的大的消化道出血事件
+> :---: | :---: | :---: | :---:
+> 1% | 1 ～ 4 | 0 ～ 2 | 2 ～ 4
+> 3% | 4 ～ 12 | 0 ～ 2 | 2 ～ 4
+> 5% | 6 ～ 20 | 0 ～ 2 | 2 ～ 4
 
 ###### 雌激素预防
 
 用于绝经后妇女的骨质疏松的预防
 
-**受益**：保存骨质、改善脂蛋白、降低心血管疾病的死亡率、减少绝经期后症状；  
-**危险**：阴道出血、子宫癌；  
-**禁忌症**：乳腺癌病史、怀孕者、子宫内膜癌、诊断不明的阴道出血史，活动性肝病、血管栓塞。  
+**受益**：保存骨质、改善脂蛋白、降低心血管疾病的死亡率、减少绝经期后症状；
+
+**危险**：阴道出血、子宫癌；
+
+**禁忌症**：乳腺癌病史、怀孕者、子宫内膜癌、诊断不明的阴道出血史，活动性肝病、血管栓塞。
+
 **可以在下列妇女中考虑**：发生骨质疏松的危险性逐渐增加，低矿物质骨症，身材细长，绝经期提前，无已知禁忌症（如诊断不明的阴道出血、活动性肝病、血管栓塞、肿瘤史）
 
+常规使用为复合马雌激素 0.625 mg，连服 25 天，同时疗程的最后 12 天内服 5～10 mg 醋酸甲羟孕酮乙酸盐。
+
+**副作用**：恶心、头痛、出血、体重增加、乳房触痛
+
+###### 乳腺癌的化学预防
+
+推荐医生同乳腺癌高风险而对副作用低风险的妇女讨论乳腺癌的化学预防，告知化学预防的好处与风险。  
+不推荐在一般妇女中使用他莫西芬等进行第一级预防。
+
+**乳腺癌的高风险人群**：年龄增大、一级家属有乳腺癌病史、乳腺切片检查中有不典型增生、初潮早、不育或晚育、使用雌激素
+
+**对化学预防副作用低风险人群**
+
+- 年轻
+- 没有血栓病的易感体质：如中风、 肺栓塞、深静脉血栓
+- 子宫切除
+
+> 对于两种化学预防的药物：Tamoxifen/Raloxifene 有证据表明前者效果更优，并已经被美国 FDA 批准。
+
 #### 5. 预防性治疗（preventive treatment）
+
+指通过应用一些治疗的手段，预防某一疾病从一个阶段进展到更为严重阶段，或预防从某一较轻疾病发展为另一较为严重疾病的方法。
+
+- 早期糖尿病的血糖控制（包括饮食和身体活动等行为的干预以及药物治疗）预防更为将来可能出现更为严重的并发症；
+- 手术切除肠息肉，预防发展为大肠癌；
+- ……
+
+### 二、临床预防服务的循证
+
+疾病的预防是重要的，但不是每一项预防措施对人群都是有益的。  
+人群健康干预的策略必须以科学研究的循证为基础。
+
+$$
+总的疾病负担 = \begin{cases}
+  未知 \to 有待研究部分\\
+  \left.\begin{aligned}
+    医疗作用 \\
+    临床预防作用 \\
+    人群预防作用
+  \end{aligned}\right\} 已有科学证据证明可预防的部分 \{ 科学证据证明但还没有应用来预防的部分
+\end{cases}
+$$
+
+### 三、临床预防服务的推荐
+
+![临床预防服务推荐分级表](assets/markdown-img-paste-20210304173212912.png)
+
+#### 有效临床预防服务的优先次序
+
+服务 | 描述 | $CPB^2$ | $CE^3$ | 总和
+:--- | :--- | :---: | :---: | :---:
+阿司匹林化学预防 | 讨论每天服用阿司匹林（男 ≥ 40岁， 女 ≥ 50 岁，和其他心血管危险增高的人群）来预防心血管事件的利弊。 | 5 | 5 | 10
+儿童计划免疫接种 | 儿童免疫接种：白喉，破伤风，百日咳，麻疹，腮腺炎，风疹，灭活脊髓灰质炎病毒，B型流感嗜血杆菌，乙型肝炎，水痘，肺炎球菌，流感。 | 5 | 5 | 10
+询问烟草使用情况并对吸烟者进行简要的干预 | 询问成人烟草使用的情况；对发现的吸烟者提供简要的指导，并提供药物治疗。 | 5 | 5 | 10
+结肠直肠癌筛检 | 常规使用粪便隐血试验（FOBT）、 乙状结肠镜或者结肠镜对 ≥ 50 岁的成人进行筛检。 | 4 | 4 | 8
+高血压筛检 | 对所有成人常规测量血压；对高血压病人使用抗高血压药物治疗以预防心血管疾病的发生。 | 5 | 3 | 8
+流感的免疫接种 | 对 ≥ 50 岁的成人每年进行流感的免疫接种。 | 4 | 4 | 8
+肺炎球菌的免疫接种 | ≥ 65 岁的成人进行肺炎的免疫接种（一次注射）。 | 3 | 5 | 8
+询问饮酒的情况并对酗酒者进行简要的指导 | 常规地对成人进行饮酒习惯的询问，以识别那些因饮酒而危险性增加的人，并在随访中提供简要的指导。 | 4 | 4 | 8
+成人视力筛检 | 用 Snellen 视力表，常规地对 ≥ 65 岁成人的视力减退进行筛检。 | 3 | 5 | 8
+宫颈癌筛检 | 用宫颈细胞学（巴氏涂片）方法，对性活跃且有性行为发生三年内或者年龄达21岁的妇女进行宫颈癌筛检。 | 4 | 3 | 7
+血脂异常筛检 | 对 ≥ 35 岁的男性和 ≥ 45 岁的女性常规进行血胆固醇的检查，并对血脂异常者使用降脂药物进行治疗，以预防心血管疾病的发生。 | 5 | 2 | 7
+乳腺癌筛检 | 单独使用乳房 X 线摄片或者与临床乳房检查联用，对 ≥ 50 岁的女性进行乳腺癌筛检；并与40到49岁之间的妇女商量筛检乳腺癌的事宜， 以确定什么时候启动筛检。4 2 6
+衣原体筛检 从性活跃期开始到25岁的妇女进行常规原体筛检2 4 6
+补钙咨询（化学预防）为青少年和青年女性提供关于使用补钙来预防骨折的咨询3 3 6
+儿童视力筛检 对<5岁儿童进行常规视力筛检， 以辨别弱视、 斜视以及视觉敏锐度缺陷2 4 6
