--- a/预防医学II/笔记/8 临床预防服务概论.md
+++ b/预防医学II/笔记/8 临床预防服务概论.md
@@ -244,7 +244,161 @@ $$
 成人视力筛检 | 用 Snellen 视力表，常规地对 ≥ 65 岁成人的视力减退进行筛检。 | 3 | 5 | 8
 宫颈癌筛检 | 用宫颈细胞学（巴氏涂片）方法，对性活跃且有性行为发生三年内或者年龄达21岁的妇女进行宫颈癌筛检。 | 4 | 3 | 7
 血脂异常筛检 | 对 ≥ 35 岁的男性和 ≥ 45 岁的女性常规进行血胆固醇的检查，并对血脂异常者使用降脂药物进行治疗，以预防心血管疾病的发生。 | 5 | 2 | 7
-乳腺癌筛检 | 单独使用乳房 X 线摄片或者与临床乳房检查联用，对 ≥ 50 岁的女性进行乳腺癌筛检；并与40到49岁之间的妇女商量筛检乳腺癌的事宜， 以确定什么时候启动筛检。4 2 6
-衣原体筛检 从性活跃期开始到25岁的妇女进行常规原体筛检2 4 6
-补钙咨询（化学预防）为青少年和青年女性提供关于使用补钙来预防骨折的咨询3 3 6
-儿童视力筛检 对<5岁儿童进行常规视力筛检， 以辨别弱视、 斜视以及视觉敏锐度缺陷2 4 6
+乳腺癌筛检 | 单独使用乳房 X 线摄片或者与临床乳房检查联用，对 ≥ 50 岁的女性进行乳腺癌筛检；并与 40 到 49 岁之间的妇女商量筛检乳腺癌的事宜，以确定什么时候启动筛检。 | 4 | 2 | 6
+衣原体筛检 | 从性活跃期开始到25岁的妇女进行常规原体筛检 | 2 | 4 | 6
+补钙咨询（化学预防） | 为青少年和青年女性提供关于使用补钙来预防骨折的咨询 | 3 | 3 | 6
+儿童视力筛检 | 对 < 5 岁儿童进行常规视力筛检，以辨别弱视、斜视以及视觉敏锐度缺陷 | 2 | 4 | 6
+叶酸化学预防 | 为育龄妇女提供关于补充叶酸来预防出生缺陷的常规咨询 | 2 | 3 | 5
+肥胖筛检 | 对成年病人的肥胖情况进行常规筛检，为肥胖病人提供关于至少 1 年与饮食、 运动或两者相结合的行为干预措施 | 3 | 2 | 5
+抑郁症筛检 | 对成年人的抑郁症进行筛检，并确保在临床工作中能准确诊断、治疗和随访等系列措施的有效地开展 | 3 | 1 | 4
+听力筛检 | 对 ≥ 65岁成年人进行听力损伤筛检， 并向专科转诊 | 2 | 2 | 4
+预防伤害的咨询 | 评估 < 5 岁儿童的父母所采取的安全措施，提供儿童相关的安全座椅，窗/楼梯防护，水池栅栏，毒品控制，热水温度和自行车头盔等咨询 | 1 | 3 | 4
+骨质疏松症筛检 | 常规对 ≥ 65岁成年女性，对危险度较大的 ≥ 60岁成年女性常规进行骨质疏松症筛检，并讨论不同治疗选择的益处和害处 | 2 | 2 | 4
+高危险人群的血脂异常筛检 | 对 20～35 岁男性和 20～45 岁女性，如果伴有冠心病的其他危险因素，使用降脂药物来预防冠心病的发生，需进行血胆固醇的常规检查 | 1 | 1 | 2
+糖尿病筛检 | 对高血脂或高血压的成人进行糖尿病筛检；并对糖尿病患者进行综合治疗，以达到控制血糖到标准值范围 | 1 | 1 | 2
+饮食咨询 | 对患有冠心病或其他饮食相关慢性疾病的成年患者提供高强度的行为饮食咨询 | 1 | 1 | 2
+破伤风-白喉增强 | 每隔 10 年对成人进行免疫 | 1 | 1 | 2
+
+## 第三节 临床预防服务的实施
+
+### 一、临床预防服务的实施原则
+
+> 根据上面讲述的内容，你认为在实施临床预防服务中，应该注意些什么？
+
+- 重视危险因素收集
+- 医患双方共同决策
+- 综合性连续性
+- 以健康咨询为先导
+- 合理选择健康筛检内容
+- 生命全程理念
+
+#### 生命全程保健方法（life course approach）
+
+通过把人生划分为几个明确的阶段，针对这些不同年龄组的人群在不同的场所（家庭、社区、学校、工作场所）中实施卫生保健措施，从而保证人生的不同阶段既能有效地获得有针对性的卫生服务，也不造成不必要的重复或遗漏，达到促进人群健康既高效又节省的目的。
+
+### 二、临床预防服务的实施基本步骤
+
+#### （一）将康危险因素收集
+
+##### 询问目的
+确定哪些危险因素需要在应诊或者随访中进一步评价、干预。
+
+> 除了诊治危重或极端痛苦的病人外，应该为病人提供咨询。
+如何用简短的时间进行有效地询问？
+
+- 在应诊时询问几个初筛问题
+- 在体检或者其他预防性检查时系统询问
+- 制定询问的计划，每次仅询问几个问题。
+- 如果仅有询问一个问题的时间，则应该问：  
+  > 对于成年人？  
+  > 对于青少年？
+
+##### 如何询问
+询问的时间可以放在问诊过程中或者将要结束时。
+
+> 如：让患者因感冒就诊。  
+> 「好了，您由于着凉咳嗽、咽痛两天，等一下我
+会进一步检查。现在我想询问一下您的一些生活
+方式的问题。您吸烟吗？」
+
+##### 如何开始
+
+1. **婉转和舒适的转折**  ：「您的胆囊问题可以转到外科处理，可能需要手术治疗。我想治疗结果应该令您满意。有时候，我们过于注意某个疾病，而忽略了其他与健康有关的其他问题。现在，我想询问一下与您健康有关的其他问题。您同意吗？」  
+2. **注意病人的情绪反应**：措辞、语调、非语言交流等。  
+3. **识别并表示理解**  
+4. **避免判断性语句**
+
+##### 问什么
+
+###### 吸烟
+
+- 初筛：「您吸烟吗？」
+- 后继：「您目前还吸烟么？」
+
+###### 体力活动
+
+- 「您每天有多少时间进行体力活动？」
+- 家长：「您的孩子每天有多少时间进行体力活动？」
+
+###### 日常饮食
+
+- 「最近24小时内您吃过哪些食品？」
+- 婴儿父母：「孩子是母乳还是人工喂养？」「多长时间喂养一次？」
+- 年长儿父母：「您的孩子三餐和点心，吃些什么食品？」
+
+###### 性生活
+
+- 「您的朋友中有婚外性行为的人吗？」
+- 「您是否有这种行为？」
+- 「您采用什么样的避孕方式？」
+
+###### 酒精及其他药物使用
+
+- 「您每天喝酒吗？」
+- 「您的朋友有吸毒的人吗？」
+- 「您吸过吗？」
+
+###### 意外伤害
+
+- 「您一直遵守交通规则吗？」
+- 「您曾经酒后驾车吗？」
+- 「您是否经常闯红灯？」
+- 对婴儿父母：「您的孩子是否曾因进食受噎？」「是否被棉被等物品捂住口鼻？」
+
+###### 口腔卫生
+
+- 「您每天刷几次牙？」
+- 「您的牙龈出血吗？」
+- 「最近一次看牙医是什么时候？」
+
+###### 精神卫生和功能
+
+- 「近来您的情绪如何？」
+- 家长：「近来您的孩子在学什么？」
+- 老年人：「您在生活自理、进餐和洗澡等方面有困难吗？」
+
+###### 既往病史
+
+- 「医生曾诊断您患有什么疾病吗？」
+
+###### 家族史
+
+- 「您是否有心脏病、肿瘤、糖尿病的家族史？」
+
+###### 职业与环境危险因素
+
+- 「您从事什么工作？」「在工作中是否接触化学物质、
+噪声或其他有害物质？」
+- 父母：「您住在哪里？」「靠近什么工厂或交通干线？」「家里饮用什么水？」
+
+###### 旅游史
+
+###### 筛检状况
+
+- 询问是否接受与其年龄和特征相符合的筛检，如针对 50 岁以上的妇女：「您最近一次的乳房摄片在什么时候？」
+
+###### 免疫状况
+- 询问是否接受与其年龄和特征相符合的免疫接种
+- 「您最近一次注射破伤风疫苗是什么时候？」
+- 对于儿童和青少年，问父母或查阅医学记录
+
+![重要危险因素的初筛问题实例](assets/markdown-img-paste-20210304212833278.png)
+
+#### （二）健康危险度评估
+
+- 健康危险度评估是研究致病危险因素和慢性病发病率及死亡率之间数量依存关系及其规律性的一种技术。
+- 健康危险度评估，将生活方式等因素转化为可测量的指标，预测个体在未来一定时间发生疾病或死亡的危险，同时估计个体降低危险的潜在可能，并将信息反馈给个体。
+- 健康危险度评估属于疾病的初始级预防，在疾病尚未出现时评估危险因素对疾病的影响，通过健康促进教育人们建立健康的生活方式。
+- 健康危险度评估是一项积极的健康促进措施，也是预防慢性病的有效手段。
+
+随着社区卫生服务和全科医学在我国迅速发展，全科医生在开展慢性病防治，需要危险度评估技术提高健康教育力度。
+
+```mermaid
+graph TB
+个体危险度评估 --> 帮助病人预测健康状况 --> 及时识别危险因素 --> 改变不良生活方式增进健康
+```
+
+##### 评估的基础
+- 表面健康、无任何病症的人群中可能处于有潜在病症的发展中，在将来有可能扩散并导致过早死亡；
+- 导致这种风险的因素是可以被检查出来的。
+- 有些风险因素是可以被消除或者控制的，从而防止或减轻病情的发展，防止或推迟患病或死亡。
