--- a/预防医学II/笔记/8 临床预防服务概论.md
+++ b/预防医学II/笔记/8 临床预防服务概论.md
@@ -402,3 +402,83 @@ graph TB
 - 表面健康、无任何病症的人群中可能处于有潜在病症的发展中，在将来有可能扩散并导致过早死亡；
 - 导致这种风险的因素是可以被检查出来的。
 - 有些风险因素是可以被消除或者控制的，从而防止或减轻病情的发展，防止或推迟患病或死亡。
+
+#### （三）个体化健康维护计划（health maintenance schedule）
+
+指在特定的时期内，依据求医者的年龄、性别及危险因素而计划进行的一系列干预措施。
+
+##### 1. 个体化健康维护计划的制定原则
+
+以问题为导向的记录方式
+
+- **主观资料**：主诉、症状、疾病史、家族史、社会生活史等
+- **客观资料**：体检、实验室检查结果、心理行为测量结果、
+病人态度、行为
+- **对健康问题的评价**：诊断、鉴别、预后以及对危险因素的评价
+- **健康维护计划**：诊断、治疗、预防保健、健康指导
+
+> **案例**
+>
+> 王先生，男，45 岁，离婚，律师。
+>
+> **主观资料**
+>
+> 过去 6 周，反复出现上腹部烧灼感，进食后加重。服抗酸药可以减轻。无恶心、呕吐、腹泻、便秘。  
+类似情况以往也曾发生，但以2个月前离婚后更为加剧。  
+近日睡眠不好，有时靠安眠药入睡。  
+每日吸烟 20 支，每天饮咖啡 4～5 杯。
+>
+> 既往史：30 岁曾查出乙肝表面抗原阳性。
+>
+> 家族史：父亲 75 岁时死于大肠癌。
+>
+> **客观资料**
+>
+> 病人紧张焦虑。腹软，上腹部有轻压痛。无包块。大便隐血试验阳性。
+>
+> **对健康问题的评价**
+>
+> 主要健康问题：初步诊断为胃溃疡。
+>
+> 健康危险因素：
+> - 吸烟、饮咖啡等刺激性饮料加重了胃溃疡症状；
+> - 离婚作为大的生活事件，增加了胃溃疡等身心疾病的发作机会；
+> - 有肠癌的家族史，隐血试验阳性，患者应予以注意。必要时进行结肠镜检查。
+> - 肝功能也需定期复查。
+>
+> **健康维护计划**
+>
+> 1. 诊断计划  
+>   - 胃镜检查
+>   - 幽门螺旋杆菌试验
+>   - 肝功能检查
+> 2. 治疗计划  
+>   - 抗酸治疗
+>   - 心理咨询和疏导
+> 3. 健康维护计划  
+>   - 大便隐血试验
+>   - 戒烟（5A）
+>   - 停咖啡：少饮或不饮咖啡
+>   - 健康教育：吸烟危害、心理疏导等健康教育
+>   - 按照患者年龄，进行胆固醇、肿瘤、牙齿等检查。
+
+###### 病人教育资料
+
+健康是你的责任
+
+你所能做的几项重要活动：
+
+1. 不吸烟；
+2. 平衡膳食，少吃盐和含饱和脂肪酸的食品；
+3. 可适量饮酒，但禁止酒后驾车；
+4. 有规律地锻炼身体；
+5. 注意生活中的压力与紧张，减少不必要的压力。
+
+通过医生指导在家中做好你的保健工作：
+
+- 如果超重，那么现在是节食的最好时机；
+- 有规律的检查颈部与腹股沟，发现新的肿块要及时（不超过一个月）报告你的医生。
+  - 女性
+    - 每月检查乳房肿块。
+    - 绝经后观察阴道流血情况。
+  - 男性：检查睾丸肿块。
