--- a/预防医学II/笔记/9 健康行为干预.md
+++ b/预防医学II/笔记/9 健康行为干预.md
@@ -130,3 +130,122 @@ A -->| 行动的引发物: 教育 / 出现疾病的一些症状 / 媒介效应| 
 B -->|自我效能: 有信心进行该行为| 行为改变
 end
 ```
+
+### （二）行为改变的阶段变化理论（Stages of Change）
+
+> **关注……**
+>
+> 同样是每天一包的吸烟者，甲根本不考虑戒烟，乙打算在3个月内戒烟，丙决定从明天起戒烟。
+> 他们的情况相同吗？
+
+**理论背景**：1982，Prochaska 和 Diclimente 在从事戒烟的相关研究中，以其他的理论构念（个人行为改变意愿、行为改变阶段）为基础提出来的。
+
+**理论假设**：行为改变是一个过程而不是一个结果，每个人在行为改变的动机、准备方面，处于不同水平（有程度的差别）。
+
+**基本理论概念**
+- 人们一般要经历五个行为改变的阶段
+- 人们经过各个阶段的速度不一
+- 人们可能会在行为改变的各阶段之间来回变动
+
+#### 1. 行为变化阶段
+
+概念 | 简单定义 | 干预措施
+:---: | --- | ---
+无打算阶段 | 未意识到问题存在，未想到要改变行为 | 提高需要改变的意识；提供个体化的改变行为可得益处，不良行为后果的信息
+打算阶段 | 想在最近（6 个月之内）进行行为改变 | 动员、鼓励病人制定特定的计划
+准备阶段 | 制定一个月行动计划 | 帮助制定一个具体的行动计划<br/>设定阶段性行为改变目标
+行动阶段 | 实施特定的行为（保持 6 个月） | 协助信息反馈、解决问题、社会支持，强化
+维持阶段 | 继续行为的改变 (6 个月以上，甚至终生) | 协助应对可能问题、设置提醒物、寻找替代品、避免反复
+
+##### 无打算阶段
+
+未考虑在接下来的 6 个月内改变自己的行为，或者是有意坚持不改变。
+
+**特点**：不喜欢考虑或谈论有关这些高危行为的话题，甚至还有另外一套理论来抵制，他们也不打算参加健康促进项目。
+
+##### 打算阶段
+
+人们考虑在接下来的 6 个月内，对某些特定行为作出改变。他们已经意识到改变行为可能带来的益处，但是也十分清醒所要花费的代价，在效益和成本之间的权衡处于一种矛盾的心态。在此阶段停滞的时间可能不会很长，常常被称为慢性打算或行为拖延阶段。
+
+**特点**：
+
+- 知道行为的不良后果
+- 不知如何开始行动
+- 行为的代价 > 预期的好处
+- 自信心不高
+
+##### 准备阶段
+
+人们严肃地承诺作出改变，并且开始有所行动，如打算加入健康教育培训班，向别人咨询，同医生交谈，购买辅导书等等
+
+**特点**：
+
+- 知道如何开始，却不知道如何维持行为的改变。需
+要一个改变计划
+- 预计的益处 = 所需花费的代价
+- 有外在的动机
+- 自信心一般
+- 适当的准备是一个人能否进行自我改变的关键
+
+##### 行动阶段
+
+人们已经改变了自己的行为，但维持时间少于 6 个月；  
+行动仅是 5（6）个阶段中的一个阶段，还不能看成行为的改变。行为改变是指要达到专业人员认可的能减少疾病风险的程度。
+
+> 例如：在戒烟行为中，仅仅是减少吸烟量；或合理膳食行为中，仅仅是减少来源于脂肪的卡路里量，都只能看成是行动而并非行为的改变。
+
+**特点**：
+
+- 定期执行某行为，但时间 < 6 个月
+- 存在较大的复发风险
+- 行为成本 < 可能的益处
+- 既有外在动机也有内在动机
+- 自信心很高
+
+##### 维持阶段
+
+改变这种行为已经 6 个月以上，达到了预期的健康目标。在这个阶段应当预防反复，使人们对行为改变更有自信心。
+
+**特点**：
+
+- 无论发生什么都能继续执行该行为
+- 自觉行为代价 < 自觉行为益处
+- 内在动机强烈
+- 自信心非常高
+
+#### 2. 行为的阶段变化理论的基本原则
+
+处于不同行为转变阶段的对象有不同的需要，应根据他们的特点和需要采取相应的措施。
+
+#### 3. 阶段变化理论的局限性
+
+- 仅为描述，非原因性解释
+- 各阶段划分不够明确
+
+### （三）社会认知理论（Social Cognitive Theory）
+
+心理学家常常根据单项的原因解释人们的行为：行为或者被描述为受环境控制和塑造的，要么认为是受内部驱动力驱动的。
+
+社会认知理论根据三方互动的原因解释心理现象。根据这一互动的因果模型，人的能动性是其内部因素（认知、情感等）、行为模式和环境营销三者彼此相互作用的结果。
+
+```mermaid
+graph LR
+subgraph RECIPROCAL DETERMINISM
+A[BEHAVIOUR<br/>Learning] --- B[ENVIRONMENT]
+B --- C[PERSONAL<br/>FACTORS]
+C --- A
+end
+```
+
+双向箭头表示了两个因素之间的决定关系。
+- **主体与行为的相互决定**
+  - 个体的期待、信念、意向、情绪等主体因素影响或决定行为方式；
+  - 行为的内部或外部反馈结果又部分决定他的思想信念和情感反应；
+- **行为与环境的相互决定**
+  - 环境是行为的对象，行为改变着环境；同时，行为也必须适应环境。
+- **主体与环境的相互作用**
+  - 虽然个体的人格特征、认知技能是环境作用的产物，但环境的存在及作用不是绝对的，而是潜在的，取决于主体的认知把握。
+
+> The social cognitive theory explains how people acquire and maintain certain behavioral patterns, while also providing the basis for intervention strategies (Bandura, 1997).
+> 
+> Evaluating behavioral change depends on the factors environment, people and behavior. SCT provides a framework for designing, implementing and evaluating programs.
