--- a/预防医学II/笔记/9 健康行为干预.md
+++ b/预防医学II/笔记/9 健康行为干预.md
@@ -228,14 +228,7 @@ end
 
 社会认知理论根据三方互动的原因解释心理现象。根据这一互动的因果模型，人的能动性是其内部因素（认知、情感等）、行为模式和环境营销三者彼此相互作用的结果。
 
-```mermaid
-graph LR
-subgraph RECIPROCAL DETERMINISM
-A[BEHAVIOUR<br/>Learning] --- B[ENVIRONMENT]
-B --- C[PERSONAL<br/>FACTORS]
-C --- A
-end
-```
+![个人-行为-环境交互影响示意图](assets/markdown-img-paste-20210307153607647.png)
 
 双向箭头表示了两个因素之间的决定关系。
 - **主体与行为的相互决定**
@@ -247,5 +240,93 @@ end
   - 虽然个体的人格特征、认知技能是环境作用的产物，但环境的存在及作用不是绝对的，而是潜在的，取决于主体的认知把握。
 
 > The social cognitive theory explains how people acquire and maintain certain behavioral patterns, while also providing the basis for intervention strategies (Bandura, 1997).
-> 
+>
 > Evaluating behavioral change depends on the factors environment, people and behavior. SCT provides a framework for designing, implementing and evaluating programs.
+
+#### 1. 社会认知理论的主要概念
+
+概念 | 定义 | 应用
+--- | --- | ---
+环境<br/>environment | 客观存在的外部因素 | 提供机会和社会支持
+情境<br/>situaton | 个人对外部环境的理解 | 修正错误概念，促进健康规范
+行为能力<br/>behavioral capability | 执行特定行为的知识和技能 | 通过技能培训，促进主动学习
+结果预期<br/>outcome expectation | 预期的行为结果 | 模拟健康行为的有利结果
+结果期望<br/>outcome expectancies | 对特定的行为结果的价值的判断，把预期的行为结果量化 | 展示行为改变的有意义的结果
+自我控制<br/>self-control | 对针对目标的行为或行为实施的个人调节 | 提供目标设定、决策、问题解决、自我监督和自我奖励的机会
+观察学习<br/>observational learning | 通过观察其他人的行为和结果而形成自已行为的过程 | 提供目标行为的角色模式
+强化<br/>reinforcements | 对行为的应答，可进一步增强或减弱该行为发生的可能性 | 促使自我奖励和激励
+自我效能<br/>self-efficacy | 个人对实施某特定行为并克服困难的信心 | 通过能确保成功的小步骤来开始行为改变；寻找该种改变的特点
+情感性应答反应<br/>emotional coping responers | 个人处理感情刺激的策略和战术 | 提供处理紧张和解决问题的培训，包括实践针对因情景而产生的情绪的应对技能
+交互决定论<br/>reciprocal determinism | 在个人、行为和环境的动态交互影响中形成行为 | 考虑促使行为改变的多种因素,包括环境改变、技能和个人变化
+
+- **环境（environment）**：个人身体之外的，能够影响个体行为的所有客观因素的总称。
+  - 物质环境包括房间的大小、室温、所需的资源及可及性等。社会环境包括家庭成员、朋友、同事、同学等。环境能在人们毫无知觉的情况下影响人们的行为。
+- **情境（situation）**：客观环境在心理的反映，包括真实的、歪曲的或想象的因素。情境时个体对环境的主观感觉，如场所、时间、外形特征、参与者以及他在情境中的角色。
+
+- **观察学习（observational learning）**
+  - 观察学习是一个信息加工过程。将有关示范原型的行为结构和环境事件的信息作为符号表征，作为观察者以后表现这种行为的内部指导。
+  - 包括四个子过程：注意过程、保持过程、生成过程、动机过程。
+    - 注意过程：观察者将心理资源等贯注于示范事件的过程。决定了个体选择什么为观察对象，以及从观察对象中获得什么信息。
+    决定因素：观察榜样的细致程度、外界刺激的影响、榜样本身的特征、榜样与自身的相似性。
+    - 保持过程：观察者将观察过程获得的有关的示范行为转化为语言或符号并存储于记忆之中以备用的过程。
+      - 认知演练：将示范事件或行为在头脑中向放电影一样放一遍。
+    - 生成过程：观察者实现示范行为。  
+    在导致生成过程中，除了具备复制被观察事件的技能，动机也必不可少。如果没有学习被示范行为的动机，则注意和保持过程不会导致生成过程。
+
+结果预期（outcome expectation）
+> Outcome expectation is a judgment of the likely consequence that a certain behavior will produce.
+> “When I do exercises, I will be
+stronger.”
+
+结果期望（outcome expectancies）
+
+> Outcome expectancies are the values that individuals place on a certain outcome.
+
+期望值指个体对行为的某个特定结果所赋予的值。通常以连续的数值来表示期望值的大小。
+个体的正性期望值可以作为个体行为改变的促进因素。
+
+> 如果我参加锻炼，我的身体将发生变化……
+> （-5 代表瘦弱，5 代表强壮）
+
+行为能力（behavioral capability)
+ 如果一个人要完成某一特征的行为，他必须知道要做什么以及如何做。
+ 自我效能是一个人对自己能力的感知，而行为能力则是一个人真正的能力。
+ 只提供知识是不够的，必须提供接近于真实的场景来提高人们的行为能力。
+ 提高行为能力的训练必须包括教授知识、提供练习的机会以及对实习的反馈。
+
+惩罚
+与强化相反，是削弱操作性行为的过程
+1）一个具体的行为发生
+2）有一个结果紧随着这个行为
+3）导致了这个行为在将来不太可能发生（行为被弱化）
+
+启示
+1）社会认知理论不仅可以用以解释个体行为改变机制，也可以用于改变行为的健康促进干预中。
+2）在设计干预项目时，要注重环境、个体和行为三方面的影响。
+3）在应用时，应鉴别出所有的可能影响干预行为的理论概念和变量，进行综合干预。
+4）同时考虑自我效能、自我控制、自我强化、观察学习、环境、情境等重要概念在改变人类行为中的作用。
+
+> **实例：为了健康和快乐多吃蔬菜水果**
+>
+> 是美国的一个为帮助小学四、五年级的学生多吃蔬菜水果的学校健康教育项目
+>
+> 研究目的：将学生每日蔬菜水果食用量由 1.8～2.5 份提高到 5 份（美国饮食指南建议为 5～9 份）
+>
+> 环境、个人、行为方面都对儿童不愿吃蔬菜水果有影响
+> - 低收入家庭中难于保证供应，其他家庭不易随意取得
+> - 个人对水果蔬菜不喜欢，对口味方面没有积极的预期
+> - 儿童缺乏选择蔬菜水果和食谱的能力
+>
+> 找到相应的办法和策略并转变为实际的措施
+> 社会认知理论中的主要概念在该项目中的应用
+>
+> 概念 | 具体措施
+> --- | ---
+> 环境 | 改善家中获得蔬菜水果的条件，父母参与，学校支持
+> 行为能力 | 提高学生制作食谱和在家中和快餐店中主动要求蔬菜水果的能力
+> 结果预期 | 让学生明白多吃水果蔬菜能增强在学校的活动能力并得到同学的尊重
+> 自我控制 | 让学生制订多吃蔬菜水果的目标
+> 观察学习 | 学生观察老师如何为自己制订改善饮食习惯的目标
+> 强化 | 对实现目标的学生给予精神和物质鼓励
+> 自我效能 | 通过角色扮演让学生增强获得水果蔬菜的信心
+> 相互决定论 | 学生要求家中多买蔬菜水果；而当家中蔬菜水果多了以后，学生就能因为方便而多吃；增加了对水果蔬菜的接触又会使学生更喜欢吃它们
