--- a/预防医学II/笔记/9 健康行为干预.md
+++ b/预防医学II/笔记/9 健康行为干预.md
@@ -259,26 +259,30 @@ end
 情感性应答反应<br/>emotional coping responers | 个人处理感情刺激的策略和战术 | 提供处理紧张和解决问题的培训，包括实践针对因情景而产生的情绪的应对技能
 交互决定论<br/>reciprocal determinism | 在个人、行为和环境的动态交互影响中形成行为 | 考虑促使行为改变的多种因素,包括环境改变、技能和个人变化
 
-- **环境（environment）**：个人身体之外的，能够影响个体行为的所有客观因素的总称。
-  - 物质环境包括房间的大小、室温、所需的资源及可及性等。社会环境包括家庭成员、朋友、同事、同学等。环境能在人们毫无知觉的情况下影响人们的行为。
-- **情境（situation）**：客观环境在心理的反映，包括真实的、歪曲的或想象的因素。情境时个体对环境的主观感觉，如场所、时间、外形特征、参与者以及他在情境中的角色。
+##### 环境（environment）
 
-- **观察学习（observational learning）**
-  - 观察学习是一个信息加工过程。将有关示范原型的行为结构和环境事件的信息作为符号表征，作为观察者以后表现这种行为的内部指导。
-  - 包括四个子过程：注意过程、保持过程、生成过程、动机过程。
-    - 注意过程：观察者将心理资源等贯注于示范事件的过程。决定了个体选择什么为观察对象，以及从观察对象中获得什么信息。
-    决定因素：观察榜样的细致程度、外界刺激的影响、榜样本身的特征、榜样与自身的相似性。
-    - 保持过程：观察者将观察过程获得的有关的示范行为转化为语言或符号并存储于记忆之中以备用的过程。
-      - 认知演练：将示范事件或行为在头脑中向放电影一样放一遍。
-    - 生成过程：观察者实现示范行为。  
-    在导致生成过程中，除了具备复制被观察事件的技能，动机也必不可少。如果没有学习被示范行为的动机，则注意和保持过程不会导致生成过程。
+个人身体之外的，能够影响个体行为的所有客观因素的总称。
 
-结果预期（outcome expectation）
+- 物质环境包括房间的大小、室温、所需的资源及可及性等。社会环境包括家庭成员、朋友、同事、同学等。环境能在人们毫无知觉的情况下影响人们的行为。
+
+##### 情境（situation）
+
+客观环境在心理的反映，包括真实的、歪曲的或想象的因素。情境时个体对环境的主观感觉，如场所、时间、外形特征、参与者以及他在情境中的角色。
+
+##### 行为能力（behavioral capability)
+
+如果一个人要完成某一特征的行为，他必须知道要做什么以及如何做。  
+自我效能是一个人对自己能力的感知，而行为能力则是一个人真正的能力。  
+只提供知识是不够的，必须提供接近于真实的场景来提高人们的行为能力。  
+提高行为能力的训练必须包括教授知识、提供练习的机会以及对实习的反馈。
+
+##### 结果预期（outcome expectation）
+
 > Outcome expectation is a judgment of the likely consequence that a certain behavior will produce.
 > “When I do exercises, I will be
 stronger.”
 
-结果期望（outcome expectancies）
+##### 结果期望（outcome expectancies）
 
 > Outcome expectancies are the values that individuals place on a certain outcome.
 
@@ -288,23 +292,79 @@ stronger.”
 > 如果我参加锻炼，我的身体将发生变化……
 > （-5 代表瘦弱，5 代表强壮）
 
-行为能力（behavioral capability)
- 如果一个人要完成某一特征的行为，他必须知道要做什么以及如何做。
- 自我效能是一个人对自己能力的感知，而行为能力则是一个人真正的能力。
- 只提供知识是不够的，必须提供接近于真实的场景来提高人们的行为能力。
- 提高行为能力的训练必须包括教授知识、提供练习的机会以及对实习的反馈。
+##### 观察学习（observational learning）
 
-惩罚
-与强化相反，是削弱操作性行为的过程
-1）一个具体的行为发生
-2）有一个结果紧随着这个行为
-3）导致了这个行为在将来不太可能发生（行为被弱化）
+观察学习是一个信息加工过程。将有关示范原型的行为结构和环境事件的信息作为符号表征，作为观察者以后表现这种行为的内部指导。
 
-启示
-1）社会认知理论不仅可以用以解释个体行为改变机制，也可以用于改变行为的健康促进干预中。
-2）在设计干预项目时，要注重环境、个体和行为三方面的影响。
-3）在应用时，应鉴别出所有的可能影响干预行为的理论概念和变量，进行综合干预。
-4）同时考虑自我效能、自我控制、自我强化、观察学习、环境、情境等重要概念在改变人类行为中的作用。
+包括四个子过程：注意过程、保持过程、生成过程、动机过程。
+
+- 注意过程：观察者将心理资源等贯注于示范事件的过程。决定了个体选择什么为观察对象，以及从观察对象中获得什么信息。
+  - 决定因素：观察榜样的细致程度、外界刺激的影响、榜样本身的特征、榜样与自身的相似性。
+- 保持过程：观察者将观察过程获得的有关的示范行为转化为语言或符号并存储于记忆之中以备用的过程。
+  - 认知演练：将示范事件或行为在头脑中向放电影一样放一遍。
+- 生成过程：观察者实现示范行为。  
+在导致生成过程中，除了具备复制被观察事件的技能，动机也必不可少。如果没有学习被示范行为的动机，则注意和保持过程不会导致生成过程。
+
+##### 自我效能（self-efficacy）
+
+指的是个体对自己执行某一特定行为的能力大小的主观判断，即 **个体对自己执行某一特定行为并达到预期结果的能力的自信心**。
+
+> **Self-efficacy** is a judgment of a person’s capability to accomplish a certain level of performance. I’m confident that I can do exercise everyday.
+
+自我效能感是个人对自己是否具备某一行为水平的能力的
+判断，而结果预期是对这种行为可能带来的结果的判断。
+
+> **例如**：相信自己跳过 1 米的高度是一种效能判断，而预期到这一行为所带来的表彰、赞扬、自我满足构成了自我预期。
+> > 我能否坚持参加锻炼？
+> > -5 代表肯定不能，5 代表肯定能
+
+###### 结果期望和自我效能交互作用
+
+人们对结果的期望很大程度上依赖于自己在既定情境中行为水平的判断。  
+认为自己不适合走山路的司机会想象到车祸或身体受伤的结果；而对自己能力有充分信心的司机会预期到顺利愉快的场景。
+
+###### 提高自我效能的途径和方法
+
+可从四个方面来提高一个人的自我效能：
+
+- 成功地完成过某行为（过去的成功经验）
+- 间接经验 （观察其他人执行某行为）
+- 口头劝说（「你能完成这项活动」）
+- 情感激发（激发出积极的情感）
+
+##### 强化（reinforcement)
+
+- **强化**：（与操作性行为相关）
+  - 一个具体的行为发生
+  - 有一个结果紧随着这个行为
+  - 导致了这个行为在将来被加强了
+- **惩罚**：与强化相反，是削弱操作性行为的过程
+  - 一个具体的行为发生
+  - 有一个结果紧随着这个行为
+  - 导致了这个行为在将来不太可能发生（行为
+被弱化）
+
+* **正性强化**
+  - 一个具体的行为发生
+  - 随着这个行为出现了刺激的增加或者刺激强度的增加
+  - 导致了这个行为在将来被加强了
+* **负性强化**
+  - 一个具体的行为发生
+  - 随着这个行为出现了刺激的消除或者刺激强度的降低
+  - 导致了这个行为在将来被加强了
+
+正向强化和负向强化都是加强操作性行为的结果。
+
+###### 社会认知理论的强化
+- **外部强化**：外部强化通过他人的反应或其它环境因素
+来实现。作为刺激人们参与某项活动有效，但不能维持长期的改变。
+- **内部强化**：来自于个人的经验或者价值观。如：结果预期，结果期望。
+
+> **启示**
+> - 社会认知理论不仅可以用以解释个体行为改变机制，也可以用于改变行为的健康促进干预中。
+> - 在设计干预项目时，要注重环境、个体和行为三方面的影响。
+> - 在应用时，应鉴别出所有的可能影响干预行为的理论概念和变量，进行综合干预。
+> - 同时考虑自我效能、自我控制、自我强化、观察学习、环境、情境等重要概念在改变人类行为中的作用。
 
 > **实例：为了健康和快乐多吃蔬菜水果**
 >
@@ -330,3 +390,51 @@ stronger.”
 > 强化 | 对实现目标的学生给予精神和物质鼓励
 > 自我效能 | 通过角色扮演让学生增强获得水果蔬菜的信心
 > 相互决定论 | 学生要求家中多买蔬菜水果；而当家中蔬菜水果多了以后，学生就能因为方便而多吃；增加了对水果蔬菜的接触又会使学生更喜欢吃它们
+
+## 第三节 健康教育与健康促进
+
+### 一、健康教育的概念
+
+#### （一）健康教育的定义
+
+健康教育（health education）是旨在帮助对象人群或个体改善健康相关行为的系统社会活动。
+
+健康教育在调查研究的基础上采用健康信息传播等干预措施促使人群或个体自觉采纳有利于健康的行为和生活方式，从而避免或减少暴露于危险因素，帮助实现疾病预防、治疗康复，以及提高健康水平的目的。
+
+### 二、健康促进的概念
+
+#### （一）健康促进的定义
+
+健康促进（health promotion）促使人们维护和提高他们自身健康的过程，是协调人类与环境的策略，规定个人与社会对健康各自所负的责任。
+
+#### （五）健康教育与健康促进的关系
+
+> Emphasizing a shared framework for change targeted at individual behaviors and the environment.
+
+两个要素：
+个体行为
+环境改变
+
+卫生宣传-健康教育-健康促进 的差异
+
+--- | 卫生宣传 | 健康教育 | 健康促进
+:---: | --- | --- | ---
+本质 | 宣传 → 传播 | 教育 → 行为改变 | $\left.\begin{aligned}环境支持\\行为改变\end{aligned}\right\}健康$
+主要策略 | 单纯的知识传播 | 传播结合教育<br/>以教育为主 | 营造支持性环境；<br/>强调技能的培养；<br/>重视社会发动与社区组织重组卫生资源
+特点 | 单向传播 | 以行为改变为核心<br/>从行为改变出发<br/>控制单危险因素<br/>常局限疾病危险因素<br/>少量行政干预 | 全社会参与，多部门合作<br/>全新「整合」观念引入<br/>全方位控制影响健康的多种危险因素
+产生的效果 | 单纯卫生知识积累 | 知识信念行为变化<br/>可能带来个体健康但难以持久 | 干预效果明显且持久<br/>个体、群体与社会全面健康的获得
+
+例1 医院对骨折患者
+
+--- | 以往的健康教育 | 目前的健康促进
+:---: | --- | ---
+--- | $\begin{aligned}形式\begin{cases}健康教育处方\\面对面教育\\知识读物\end{cases}\\内容\begin{cases}营养教育\\自身保健教育\end{cases}\end{aligned}$ | $\begin{aligned}自己跌伤\begin{cases}道路不平整\begin{cases}社区维护\\交通维修\\路标路障\end{cases}\\走路不当心\\体质下降\begin{cases}专题讲座\\健身操练\\社区动员\end{cases}\end{cases}\\外力所伤\begin{cases}家人殴打\begin{cases}社区发动\\学校配合\\妇联合作\end{cases}\\交通意外\\外人所伤\begin{cases}社区教育\\防身术教育\\志愿者联防\end{cases}\end{cases}\end{aligned}$
+效果 | 可能缩短住院周期<br/>可提高住院期生活质量 | 减少同地区同类型骨折发生<br/>提高生活质量和社区居民素质
+
+渥太华宪章指出：健康促进是维护和改善自身健康的过程
+。
+ 不仅仅加强个人的技能和能力，还包括改变社会、环境和
+经济条件来减少它们对大众和个人健康的影响。
+ 健康促进就是要使人们尽一切可能让他们的精神和身体保
+持在最优状态，宗旨是使人们知道如何保持健康，建立健
+康的生活方式，并有能力做出健康的选择。
