--- a/预防医学II/笔记/9 健康行为干预.md
+++ b/预防医学II/笔记/9 健康行为干预.md
@@ -389,6 +389,22 @@ stronger.”
 
 ## 第三节 健康教育与健康促进
 
+卫生宣传-健康教育-健康促进 的差异
+
+--- | 卫生宣传 | 健康教育 | 健康促进
+:---: | --- | --- | ---
+本质 | 宣传 → 传播 | 教育 → 行为改变 | $\left.\begin{aligned}环境支持\\行为改变\end{aligned}\right\}健康$
+主要策略 | 单纯的知识传播 | 传播结合教育<br/>以教育为主 | 营造支持性环境；<br/>强调技能的培养；<br/>重视社会发动与社区组织重组卫生资源
+特点 | 单向传播 | 以行为改变为核心<br/>从行为改变出发<br/>控制单危险因素<br/>常局限疾病危险因素<br/>少量行政干预 | 全社会参与，多部门合作<br/>全新「整合」观念引入<br/>全方位控制影响健康的多种危险因素
+产生的效果 | 单纯卫生知识积累 | 知识信念行为变化<br/>可能带来个体健康但难以持久 | 干预效果明显且持久<br/>个体、群体与社会全面健康的获得
+
+> 例1 医院对骨折患者
+>
+> --- | 以往的健康教育 | 目前的健康促进
+> :---: | --- | ---
+> --- | $\begin{aligned}形式\begin{cases}健康教育处方\\面对面教育\\知识读物\end{cases}\\内容\begin{cases}营养教育\\自身保健教育\end{cases}\end{aligned}$ | $\begin{aligned}自己跌伤\begin{cases}道路不平整\begin{cases}社区维护\\交通维修\\路标路障\end{cases}\\走路不当心\\体质下降\begin{cases}专题讲座\\健身操练\\社区动员\end{cases}\end{cases}\\外力所伤\begin{cases}家人殴打\begin{cases}社区发动\\学校配合\\妇联合作\end{cases}\\交通意外\\外人所伤\begin{cases}社区教育\\防身术教育\\志愿者联防\end{cases}\end{cases}\end{aligned}$
+> 效果 | 可能缩短住院周期<br/>可提高住院期生活质量 | 减少同地区同类型骨折发生<br/>提高生活质量和社区居民素质
+
 ### 一、健康教育的概念
 
 #### （一）健康教育的定义
@@ -403,34 +419,63 @@ stronger.”
 
 健康促进（health promotion）促使人们维护和提高他们自身健康的过程，是协调人类与环境的策略，规定个人与社会对健康各自所负的责任。
 
+> 渥太华宪章指出：健康促进是维护和改善自身健康的过程。
+> - 不仅仅加强个人的技能和能力，还包括改变社会、环境和经济条件来减少它们对大众和个人健康的影响。
+> - 健康促进就是要使人们尽一切可能让他们的精神和身体保持在最优状态，宗旨是使人们知道如何保持健康，建立健康的生活方式，并有能力做出健康的选择。
+
+#### （二）健康促进的行动策略
+
+**健康促进5个活动领域**（《渥太华宣言》1986）
+
+##### 1. 制订健康的公共卫生政策
+
+健康促进领域内的「政策」是广义的，实际上除了由各级政府的「法规」外，还包括由各级机构为了某种群体利益或确保健康的氛围而确立的一种「规范」。制订了某些「政策」，必须包含「严格执法」的内容，否则，仍将难以保证效果的获得。政策、法规、财政、税收和组织改变……
+
+> **交通安全——立法实施见成效**
+>
+> 由于多种政策的联合作用（包括必须系安全带、对司机血液、呼吸中酒精含量的测定，以及在农村及大城市的行驶速度限制）取得了显著效果。在过去 30 年里，澳大利亚的交通事故的发生数量稳步减少。
+> 1988 年到 1993 年，澳大利亚的交通事故死亡率降低了 32%。其中以骑自行车的人死亡率的减少最为显著,反映了必须带头盔这一规定的效果。
+> 另外，禁止酒后驾车也起到了重要作用。在交通死亡事故中，司机或摩托车手血液酒精浓度超过 0.05 的比例由 1981 年的 44% 降到 1995 年的 30%。
+
+##### 2. 营造支持性环境
+
+根据行为学原理，环境对行为有着强烈的制约作用。  
+良好的环境条件，将促使行为动机得以实现并能促进新行为形成并能巩固维持。相反，恶劣的环境条件将刺激各种危险因素的滋长。  
+WHO曾指出：有利于健康的支持性环境，保护公众健康免受威胁，使公众发展健康能力并能自立。
+
+##### 3. 发展个人技能
+
+> 提高人们做出正确选择的能力
+
+**个人技能发展**
+
+- 运用大众传播媒介
+- 运用人际传播
+- 运用示范、实际操作等技巧
+- 运用社区动员、社区活动以及部门间合作的技巧
+
+##### 4. 强化社区行动
+
+良好的健康行为，通常在社区某些小人群中形成，通过社区的影响，逐步扩大到全社区人群并形成社区的行为规范，而且，在社区一般环境的支持和强化下，这种规范将进一步成为社区新的社会生活方式。
+
+**社区组织**：指的是社区内各有关部团体与人群围绕共同目标与利益形成一个活动联盟，开展部门间的合作。
+
+**社区参与**：提倡社区以主人翁身份参与，而不能被动式的参与。卫生工作者必须与社区共同讨论社区健康问题所在；共同确定计划的目标；共同落实策略干预活动并进行评价工作。
+
+##### 5. 调整卫生服务方向
+
+- **卫生工作者对预防工作的全方位参与**：所有卫生工作者直接参与对目标人群的健康知识的教育、行为改变的指导；
+- **扩展预防工作的内涵**：预防工作的内涵不再局限于单纯的生物性危险因素，而是应该延伸到类似环境、政策、健康意识、价值观、心理与行为等与健康有关的所有危险因素领域；
+- **将「倡导」功能导入卫生工作者的基本职责**：预防工作的形式将不再仅仅是健康教育，而将延伸到倡导（即以有利的证据影响政府和各团体，促进维护健康的环境氛围的建立）。
+
+> - 健康是全社会的责任，不应仅限于卫生部门
+> - 卫生部门的角色从提供者转换成参与者
+> > Health model, health leader, health advocator……
+
 #### （五）健康教育与健康促进的关系
 
 > Emphasizing a shared framework for change targeted at individual behaviors and the environment.
 
 两个要素：
-个体行为
-环境改变
-
-卫生宣传-健康教育-健康促进 的差异
-
---- | 卫生宣传 | 健康教育 | 健康促进
-:---: | --- | --- | ---
-本质 | 宣传 → 传播 | 教育 → 行为改变 | $\left.\begin{aligned}环境支持\\行为改变\end{aligned}\right\}健康$
-主要策略 | 单纯的知识传播 | 传播结合教育<br/>以教育为主 | 营造支持性环境；<br/>强调技能的培养；<br/>重视社会发动与社区组织重组卫生资源
-特点 | 单向传播 | 以行为改变为核心<br/>从行为改变出发<br/>控制单危险因素<br/>常局限疾病危险因素<br/>少量行政干预 | 全社会参与，多部门合作<br/>全新「整合」观念引入<br/>全方位控制影响健康的多种危险因素
-产生的效果 | 单纯卫生知识积累 | 知识信念行为变化<br/>可能带来个体健康但难以持久 | 干预效果明显且持久<br/>个体、群体与社会全面健康的获得
-
-例1 医院对骨折患者
-
---- | 以往的健康教育 | 目前的健康促进
-:---: | --- | ---
---- | $\begin{aligned}形式\begin{cases}健康教育处方\\面对面教育\\知识读物\end{cases}\\内容\begin{cases}营养教育\\自身保健教育\end{cases}\end{aligned}$ | $\begin{aligned}自己跌伤\begin{cases}道路不平整\begin{cases}社区维护\\交通维修\\路标路障\end{cases}\\走路不当心\\体质下降\begin{cases}专题讲座\\健身操练\\社区动员\end{cases}\end{cases}\\外力所伤\begin{cases}家人殴打\begin{cases}社区发动\\学校配合\\妇联合作\end{cases}\\交通意外\\外人所伤\begin{cases}社区教育\\防身术教育\\志愿者联防\end{cases}\end{cases}\end{aligned}$
-效果 | 可能缩短住院周期<br/>可提高住院期生活质量 | 减少同地区同类型骨折发生<br/>提高生活质量和社区居民素质
-
-渥太华宪章指出：健康促进是维护和改善自身健康的过程
-。
- 不仅仅加强个人的技能和能力，还包括改变社会、环境和
-经济条件来减少它们对大众和个人健康的影响。
- 健康促进就是要使人们尽一切可能让他们的精神和身体保
-持在最优状态，宗旨是使人们知道如何保持健康，建立健
-康的生活方式，并有能力做出健康的选择。
+- 个体行为
+- 环境改变
