--- a/预防医学II/笔记/10 烟草的控制.md
+++ b/预防医学II/笔记/10 烟草的控制.md
@@ -94,6 +94,54 @@
 - 苯
 
 #### 主流烟雾和侧流烟雾
+
 - 主流烟雾是指当吸烟者吸卷烟时从卷烟嘴端或者烟蒂端吸出的烟雾，最终仍有部分由吸烟者呼出。
 - 侧流烟雾是指从卷烟的燃烧端在两次抽吸之间阴燃时产生的烟雾，也包括从包装烟草烟纸扩散出来的烟雾。
-- 吸烟者呼出的主流烟雾和侧流烟雾，与周围的空气混合，形成我们通常所说的环境烟草烟雾（Environmental Tobacco Smoke，ETS） 。
+- 吸烟者呼出的主流烟雾和侧流烟雾，与周围的空气混合，形成我们通常所说的环境烟草烟雾（environmental tobacco smoke，ETS）。
+
+### 烟草使用对健康的影响
+
+![烟草流行概念模型](assets/markdown-img-paste-20210307192838992.png)
+
+> 2004 年摘自《美国卫生总署报告》 的主要结论
+> - 吸烟几乎伤害全身的每一个组织
+> - 戒烟既有即时的也有长期的益处，降低患病风险，改善健康状态。
+> - 吸焦油和尼古丁低的烟草对健康也没有任何明显的益处
+> - 与吸烟有关疾病的新发现：
+>   主动脉瘤，白血病，白内障，子宫颈癌，胰腺癌，肾癌，胃癌，牙周炎
+
+#### 吸烟与肿瘤
+
+已经有充分的证据表明，吸烟可以导致肺癌、口腔癌、鼻咽部恶性肿瘤、喉癌、食管癌、胃癌、肝癌、胰腺癌、肾癌、膀胱癌和宫颈癌。还有证据提示吸烟可以导致结肠直肠癌、乳腺癌和急性白血病。
+
+#### 吸烟与呼吸系统疾病
+
+吸烟对于呼吸道免疫功能、肺功能均会产生不良影响，引起多种呼吸系统疾病。有充分证据证明吸烟可以导致慢性阻塞性肺病和青少年哮喘，增加肺结核和其他呼吸道感染的发病风险。而戒烟后可以明显降低上述疾病的风险，并改善预后。
+
+#### 吸烟与心脑血管疾病
+
+有充分的证据说明吸烟可以导致冠心病、脑卒中和外周动脉疾病，戒烟可以显出降低这些疾病的发病和死亡风险。
+
+#### 吸烟对于生殖系统危害
+
+有充分的证据说明女性吸烟可以降低受孕机率，导致前置胎盘、胎盘早剥、胎儿生长受限、新生儿低出生体重以及婴儿猝死综合征。此外，有证据提示吸烟还可以导致异位妊娠和自然流产。吸烟还可以导致男性勃起功能障碍。
+
+#### 吸烟的其它危害
+
+吸烟可以导致髋部骨折、牙周炎、白内障、手术伤口愈合不良以及手术后呼吸系统并发症，皮肤老化。
+
+幽门螺旋杆菌感染者可以导致消化道溃疡。
+
+有充分证据说明吸烟可以导致牙周炎和核性白内障。
+
+吸烟可以导致 2 型糖尿病，并且可以增加糖尿病患者发生大血管和微血管并发症的风险，影响疾病预后。
+
+#### 二手烟的危害
+
+「二手烟」（secondhand smoke）又称「被动吸烟」和「环境烟草烟雾暴露」，是指不吸烟者吸入吸烟者呼出的烟雾及卷烟燃烧产生的烟雾。
+
+二手烟暴露能使非吸烟者的冠心病风险增加 25～30%，肺癌风险提高 20～30%。
+
+即使短暂的暴露，也会导致上呼吸道损伤，激发哮喘频繁发作，增加血液粘稠度，伤害血管内膜，引起冠状动脉供血不足，增加心脏病发作的危险等。
+
+二手烟可以导致新生儿猝死综合征，中耳炎，低出生体重等。
