--- a/预防医学II/笔记/10 烟草的控制.md
+++ b/预防医学II/笔记/10 烟草的控制.md
@@ -99,9 +99,7 @@
 - 侧流烟雾是指从卷烟的燃烧端在两次抽吸之间阴燃时产生的烟雾，也包括从包装烟草烟纸扩散出来的烟雾。
 - 吸烟者呼出的主流烟雾和侧流烟雾，与周围的空气混合，形成我们通常所说的环境烟草烟雾（environmental tobacco smoke，ETS）。
 
-### 烟草使用对健康的影响
-
-![烟草流行概念模型](assets/markdown-img-paste-20210307192838992.png)
+### 二、烟草使用对健康的影响
 
 > 2004 年摘自《美国卫生总署报告》 的主要结论
 > - 吸烟几乎伤害全身的每一个组织
@@ -145,3 +143,271 @@
 即使短暂的暴露，也会导致上呼吸道损伤，激发哮喘频繁发作，增加血液粘稠度，伤害血管内膜，引起冠状动脉供血不足，增加心脏病发作的危险等。
 
 二手烟可以导致新生儿猝死综合征，中耳炎，低出生体重等。
+
+### 三、烟草使用的现状及其对健康影响的特点
+
+![烟草流行概念模型](assets/markdown-img-paste-20210307192838992.png)
+
+#### 中国的烟草使用情况
+
+我国烟草流行水平居高不下，吸烟人群依然超过3亿。
+
+- 男性吸烟率一直处于高平台期；女性吸烟率仍处于相对较低的水平，但是年轻女性的吸烟率有所上升。
+- 2010 年总吸烟人数为 3.56 亿，较 2002 年调查结果有所上升。按照上述模型，再过 20 年，我国将进入吸烟归因死亡的高峰期。
+
+## 第二节 吸烟的个体干预策略
+
+### 一、烟草依赖疾病的概念
+
+烟草依赖疾病是一种慢性高复发性疾病，其本质是尼古丁依赖。烟草依赖特点为无法克制的尼古丁觅求冲动，以及强迫性地、连续地使用尼古丁，以体验其带来的欣快感和愉悦感，并避免可能产生的戒断症状。
+
+WHO 已将烟草依赖作为一种疾病列入国际疾病分类（ICD-10) 。
+
+> **烟草依赖综合症**
+> 1. 对吸烟的强烈渴望或冲动感；
+> 2. 对吸烟行为的开始、结束及剂量难以控制；
+> 3. 当停止吸烟或减少烟量时出现生理戒断状态；
+> 4. 尼古丁耐受的依据，例如必须使用较高剂量的烟草才能获得过去较低剂量的效应；
+> 5. 因吸烟逐渐忽视其它的快乐或兴趣，在获取、使用烟草或从其作用中恢复过来所花费的时间逐渐增加；
+> 6. 固执地吸烟而不顾其明显的危害性后果，如过度吸烟引起相关疾病后仍然继续吸烟。
+>
+> 诊断为烟草依赖综合征需要在过去一年内体验过或表现出六条中的至少三条
+
+> **判定尼古丁依赖的Fagerström量表**
+>
+> ![Fagerström尼古丁依赖量表](assets/markdown-img-paste-20210307194446446.png)
+
+### 二、临床日常诊疗中的戒烟指导
+
+**戒烟的意义**
+
+- 戒烟才是降低吸烟对健康危害的唯一方法。戒烟可显著降低吸烟者的死亡风险。
+- 戒烟可以降低肺癌、冠心病、慢性阻塞性肺病等多种疾病的患病风险。
+- 戒烟可以延缓肺癌、冠心病、慢性阻塞性肺病等多种疾病的进展，改善预后。
+- 吸烟的女性在怀孕前或怀孕早期戒烟，可以降低多种妊娠风险。
+- 任何年龄戒烟均可获益。早戒比晚戒好，戒比不戒好。
+- 戒烟时间越长，健康获益越大。
+
+> **WHO有关戒烟的建议**
+>
+> - 吸烟是世界上最大的，可预防的，引起疾病和死亡的因素。
+> - 戒烟15年后，肺癌死亡率降至接近不吸烟水平。
+> - 最好在35岁之前戒烟。
+
+**医生的责任**
+
+控制烟草是医生的义不容辞的责任。
+
+作为医生：
+
+- 首先不吸烟
+- 不能单纯治疗吸烟导致的疾病：
+- 帮助患者戒烟
+
+烟草控制是医生职业责任中无法回避的部分。
+
+**临床干预流程**
+
+```mermaid
+graph LR
+A{病人目前吸烟吗?} -->|是| B{病人想戒烟吗?}
+B -->|是| C[教授戒烟技能<br/>从5A中的4A开始]
+B -->|否| D[动机干预<br/>提供材料和劝导]
+```
+
+**阶段变化理论在控烟中的应用**
+
+$$
+\begin{cases}
+无打算期 \to 不愿改变现有不良行为 \to 5R动机干预\\
+\left.\begin{aligned}
+打算期\\
+准备期
+\end{aligned}\right\} \to 愿意改变不良行为 \to 提供帮助\\
+\left.\begin{aligned}
+行动期\\
+维持期\\
+终止期\end{aligned}\right\} \to 已经开始改变不良行为 \to 提供支持，解决问题
+\end{cases}
+$$
+
+**医生的潜力**
+- 10 万医生都采取有效的干预措施，每年可挽回 300 万新吸烟者。
+- 医生对吸烟病人的干预将产生一个巨大的潜在的对公众健康的影响
+
+#### （一）5A戒烟法
+
+- **Ask**：询问所有患者关于吸烟的问题
+- **Advise**：建议吸烟者戒烟
+- **Assess**：评估吸烟者的戒烟意愿
+- **Assist**：提供戒烟药物或者行为咨询治疗
+- **Arrange**：安排随访
+
+##### 1. Ask：询问吸烟情况
+
+- 询问病人现在是否吸烟
+- 询问吸烟者是否想戒烟
+- 尼古丁成瘾性量表
+- 每一次就诊时，常规地询问病人：「你吸烟吗？」或「你还吸烟吗？」对于吸烟的病人（或以前曾吸烟）就应在病人的病历上作一个永久性的标记。
+
+##### 2. Advise：建议所有的吸烟者戒烟
+
+- 告诉吸烟者「毫不犹豫地」戒烟！
+- 强调戒烟的重要性
+- 告知吸烟者为什么应该戒烟
+
+**劝告的要点**
+
+- 明确的——「戒烟对你来说是很重要的，我会帮助你。」「如果等生病才戒烟就来不及了。」
+- 强烈的——「戒烟是你现在和将来维护健康所能做的最有意义
+的事情。 我和其他医务人员将帮助你。」
+- 个性化的——对病人进行戒烟劝告时，考虑病人的健康情况、社会和经济费用、戒烟意愿、对家庭中其他成员的影响等。
+
+**抓住可教育的时间**
+- 发生与吸烟有关的疾病；
+- 肺功能检查；
+- 出现高血压；
+- 亲友患有和吸烟有关的严重疾病。
+
+##### 3. Assess：评估吸烟者的戒烟意愿
+
+- 询问每一位吸烟者在这段时间（比如在以后的 30 天内）是否愿意戒烟。
+- 评价病人的戒烟意愿：如果病人在这段时间准备戒烟，则和他们达成戒烟共识，制定戒烟计划。
+
+> **问题**：如何结合健康信念模式，强化吸烟者的戒烟意愿？
+>
+> **HBM中的基本概念**
+>
+> - 威胁
+>   - 自觉疾病的易感性（如可能患癌症）
+>   - 自觉疾病的严重性（ 如死亡）
+> - 结果的预期
+>   - 自觉特定行为的益处
+>   - 自觉执行行为的可能障碍
+> 自我效能
+
+![提高戒烟动机的干预措施5R法](assets/markdown-img-paste-20210307203319520.png)
+
+#### 4. Assist：帮助患者戒烟
+
+##### 帮助病人制定戒烟计划
+
+- 确定一个戒烟日——理想的是将戒烟日确定在两个星期内。
+- 告诉家人、朋友和同事自己准备戒烟，并请求他们的理解和支持。
+- 思考戒烟可能面临的挑战（ 特别是最初的几个星期内）。
+- 去除环境中的烟草。在戒烟之前，避免在久留地方（如工作场所、家里、汽车里）吸烟。
+
+##### 提供咨询（解决问题）
+
+- 提供治疗内的社会支持
+- 帮助病人获得治疗外的社会支持
+- 推荐药物治疗
+- 提供戒烟指南和其它戒烟资料
+
+#### 5. Arrange：安排随访
+
+当病人知道要检查他们戒烟的进展时，其戒烟成功的机会将会提高。
+
+- 在戒烟的最初两周内加强同病人的联系。随访包括对病人戒烟进展的评价，对问题的讨论等。
+- 继第一次的访问后医生或工作人员在 1～2 月内需进行第二次随访。对于谢绝随访的病人，通过电话或信件的联系。
+
+##### 工作程序的调整
+
+- 发现所有吸烟的病人：当病人被确定为吸烟者时，在吸烟病人的病历卡上应用明显的方式作出记号；
+- 在病历卡上贴上一张戒烟流程卡，这样可以让整个团队方便地了解病人目前吸烟的状况，以及当病人每次就诊时， 医务人员都能按常规简要地给予戒烟忠告。
+
+戒烟的随访可由一名医务人员安排。
+
+
+### （二）对不同类型人群的戒烟干预指导
+
+![临床场所处理烟草使用和烟草依赖的模式](assets/markdown-img-paste-20210307204521196.png)
+
+##### 劝导的流程和理论基础
+
+- **流程**：5A  
+理论基础：阶段变化理论
+- **提升动机方法**：5R  
+理论基础：健康信念模型
+
+##### 简单的临床干预步骤
+
+```mermaid
+graph TB
+A[识别吸烟者] --> B[劝阻吸烟者戒烟]
+B --> C[评估戒烟意愿]
+C --> D1A[不愿戒烟者]
+D1A --> 动机干预
+C --> D2A[愿意戒烟者]
+D2A --> D21A[药物治疗]
+D2A --> D22A[行为干预和心理支持]
+D21A --> D2B[安排随访]
+D22A --> D2B
+```
+
+## 第三节 常用的戒烟药物及使用方法
+
+### 1. 尼古丁替代疗法（nicotine replacement therapy，NRT）类药物
+
+通过向人体提供外源性尼古丁以代替或部分代替从烟草中获得的尼古丁，从而减轻尼古丁戒断症状。这种外源性尼古丁的吸收和释放速度远低于烟草中尼古丁的代谢速度，因此，可以保证吸烟者可以较长时期地把体内的尼古丁浓度维持在较低水平。包括口香糖、贴片、吸入剂、喷雾剂等。
+
+需按照尼古丁依赖程度来决定是否安排患者使用NRT类药物。
+
+### 2. 盐酸安非他酮（缓释片）
+
+盐酸安非他酮是一种具有多巴胺能和去甲肾上腺素能的抗抑郁剂，作用机制包括抑制多巴胺及去甲肾上腺素的重摄取以及阻断尼古丁乙酰胆碱受体。
+
+盐酸安非他酮为口服的处方类药。
+
+对于尼古丁严重依赖的吸烟者，联合应用 NRT 类药物可增加戒烟效果。
+
+### 3. 伐尼克兰
+
+伐尼克兰是一种新型非尼古丁类戒烟药物。伐尼克兰对神经元中 α4β2 尼古丁乙酰胆碱受体具有高度亲和力及选择性，是尼古丁乙酰胆碱受体的部分激动剂，同时具有激动及拮抗的双重调节作用。伐尼克兰与尼古丁乙酰胆碱受体结合发挥激动剂的作用，刺激释放多巴胺，有助于缓解戒烟后吸烟者对烟草的渴求和各种戒断症状；同时，它的拮抗特性可以阻止尼古丁与受体的结合，降低吸烟冲动，从而减少复吸的可能性。
+
+### 4. 联合用药原则
+
+有效的联合药物治疗包括：
+
+- 长程尼古丁贴片（> 14 周）+ 其他 NRT 类药物（如咀嚼胶和鼻喷剂）；
+- 尼古丁贴片 + 尼古丁吸入剂；
+- 尼古丁贴片 + 盐酸安非他酮。
+
+## 第四节 戒烟过程的常见问题及解决方法
+
+### 一、影响戒烟医院的常见因素
+
+> **吸烟与戒烟的常见误区**
+>
+> - 「我吸的是低焦油卷烟，是安全的。」
+> - 「并不是每个吸烟的人都得肺癌，有些人不吸烟，照样得了肺癌。」
+> - 「有的人一直吸烟没有什么问题，而一旦戒烟就大病一场。」
+> - 「我已经这么大年纪了，戒烟没啥意义。」
+>
+> **讨论**：如何运用健康行为改变理论进行具体分析？
+
+### 二、戒烟过程遇到的常见问题
+
+#### 1. 戒断症状
+
+#### 2. 增重
+
+一般而言，戒烟后平均体重增加约 4.5 斤。
+
+**对策**
+- 首先是避免进食高热量饮食
+- 建议戒烟者加强锻炼
+
+#### 3. 多次复吸
+
+复吸是戒烟的一个重要部分，帮助患者从过去的复发中吸取经验，而不是将其看作为戒烟失败或逃避未来戒烟的一个理由。当患者来看病时，医生可以帮助患者分析过去复发的情况，采用一些对策避免这些情况的出现或者用另一种方式对这种情况作出反应。
+
+一般来说，在工作上或在家庭的紧张和压力、人际关系矛盾等常常是患者吸烟复发的原因。
+
+#### 4. 缺少社会支持
+
+社会因素常常是导致戒烟复发的一个原因。
+
+鼓励所有的患者将自己的戒烟决定告诉家人、朋友及同事，以寻求他们的支持和鼓励。没有戒烟社会支持的患者，如果他们愿意的话，可以动员他们集体参加戒烟小组，以求助于咨询人员或其他卫生保健人员。
+
+对于这些造成心理紧张的情况要预先制订有一个具体的计划。
